--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.shaneleeband.com"
+baseurl = "/"
 title = "Shane Lee Band"
 theme = "hugo-universal-theme"
 themesDir = "themes"
