--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ paginate = 10
     defaultDescription = "Utah's Best Country Music"
 
     # Google Maps API key (if not set will default to not passing a key.)
-    googleMapsApiKey = "AIzaSyC-yP_RfPY9doytxrwCbkxT51vWG2aoOG8"
+    googleMapsApiKey = ""
 
     # Style options: default (light-blue), blue, green, marsala, pink, red, turquoise, violet
     style = "blue"
@@ -86,8 +86,8 @@ paginate = 10
     date_format = "January 2, 2006"
 
     logo = "img/shaneleeband.png"
-    address = """<p><strong>Shane Lee Band</strong>
-        <br>
+    address = """<p>
+        <strong>Shane Lee Band</strong>
         <br>Lehi, UT 84043
         <br>USA
         <br>
