--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -4,11 +4,11 @@ title: "Upcoming Shows 2020"
 # https://github.com/qualityshepherd/googleCalendarEventList
 description: >
   <ul class="list-style-none">
-    <li>Jul 6 - Mapleton Concert Series</li>
-    <li>Aug 2 - PG Concert Series</li>
-    <li>Aug 8 - .5K Fundraiser (Lehi)</li>
-    <li>Aug 9 - Lehi Arts in the Park</li>
-    <li>Aug 10 - Music Mondays in the Park (Ogden)</li>
-    <li>Sep 14 - PG Heritage Days</li>
+    <li>Mapleton Concert Series - Jul 6</li>
+    <li>PG Concert Series - Aug 2</li>
+    <li>.5K Fundraiser (Lehi) - Aug 8</li>
+    <li>Lehi Arts in the Park - Aug 9</li>
+    <li>Music Mondays in the Park - Aug 10</li>
+    <li>PG Heritage Days - Sep 14</li>
   </ul>
 image: "img/carousel/live.jpg"
