--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -5,8 +5,9 @@ title: "Upcoming Shows 2020"
 description: >
   <ul class="list-style-none">
     <li>Mapleton Concert Series - Jul 6</li>
+    <li>Zermatt Concert Series - Jul 18</li>
+    <li>PG Food Truck Concert - Jul 20</li>
     <li>PG Concert Series - Aug 2</li>
-    <li>.5K Fundraiser (Lehi) - Aug 8</li>
     <li>Lehi Arts in the Park - Aug 9</li>
     <li>Music Mondays in the Park - Aug 10</li>
     <li>PG Heritage Days - Sep 14</li>
