--- a/data/clients/1.yaml
+++ b/data/clients/1.yaml
@@ -1,3 +1,3 @@
-name: "Homestead Resort"
-image: "img/clients/homestead.png"
-url: "https://homesteadresort.com"
+name: "Zermatt Resort & Spa"
+image: "img/clients/zermat.png"
+url: "https://zermattresort.com"
