--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -4,12 +4,12 @@ title: "Upcoming Shows 2020"
 # https://github.com/qualityshepherd/googleCalendarEventList
 description: >
   <ul class="list-style-none">
-    <li>Mapleton Concert Series - Jul 6</li>
-    <li>Zermatt Concert Series - Jul 18</li>
-    <li>PG Food Truck Concert - Jul 20</li>
-    <li>PG Concert Series - Aug 2</li>
-    <li>Lehi Arts in the Park - Aug 9</li>
-    <li>Music Mondays in the Park - Aug 10</li>
-    <li>PG Heritage Days - Sep 14</li>
+    <li>PG Food Truck Shows - May 28</li>
+    <li>Private Party - Jun 28</li>
+    <li>Zermatt Concert Series - Jul 10</li>
+    <li>Private Party - Jul 29</li>
+    <li>PG Concert Series - Aug 1</li>
+    <li>Mapleton Concert Series - Aug 23</li>
+    <li>PG Heritage Days - Sep 13</li>
   </ul>
 image: "img/carousel/live.jpg"
