Add private party on Jun 19

--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -5,6 +5,7 @@ title: "Upcoming Shows 2020"
 description: >
   <ul class="list-style-none">
     <li>PG Food Truck Shows - May 28</li>
+    <li>Private Party - Jun 19</li>
     <li>Private Party - Jun 28</li>
     <li>Zermatt Concert Series - Jul 10</li>
     <li>Private Party - Jul 29</li>
