Add Ogden Concert Series

--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -11,6 +11,7 @@ description: >
     <li>Mapleton Concert Series - Jul 26</li>
     <li>Private Party - Jul 29</li>
     <li>PG Concert Series - Aug 1</li>
+    <li>Music Mondays in the Park - Aug 16</li>
     <li>PG Heritage Days - Sep 13</li>
   </ul>
 image: "img/carousel/live.jpg"
