--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -7,11 +7,11 @@ description: >
     <li>PG Food Truck Show - May 28</li>
     <li>Private Party - Jun 19</li>
     <li>Private Party - Jun 28</li>
-    <li>Zermatt Concert Series - Jul 10</li>
-    <li>Mapleton Concert Series - Jul 26</li>
+    <li><a href="https://zermattresort.com/wp-content/uploads/2021/06/Summer-Concert-Series-2021.pdf">Zermatt Concert Series - Jul 10</a></li>
+    <li><a href="https://parksandrec.mapleton.org/event/concerts-in-the-park-farmers-market-4/">Mapleton Concert Series - Jul 26</a></li>
     <li>Private Party - Jul 29</li>
-    <li>PG Concert Series - Aug 1</li>
-    <li>Music Mondays in the Park - Aug 16</li>
-    <li>PG Heritage Days - Sep 13</li>
+    <li><a href="https://www.plgrove.org/arts/docs/2021-concerts-in-the-park.pdf">PG Concert Series - Aug 1</a></li>
+    <li><a href="https://www.northogdencity.com/parksrec/page/music-mondays-park">Music Mondays in the Park - Aug 16</a></li>
+    <li><a href="https://www.facebook.com/PGHeritageFestival/">PG Heritage Days - Sep 13</a></li>
   </ul>
 image: "img/carousel/live.jpg"
