Try forcing style in hyperlink

--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -7,7 +7,7 @@ description: >
     <li>PG Food Truck Show - May 28</li>
     <li>Private Party - Jun 19</li>
     <li>Private Party - Jun 28</li>
-    <li><a href="https://zermattresort.com/wp-content/uploads/2021/06/Summer-Concert-Series-2021.pdf">Zermatt Concert Series - Jul 10</a></li>
+    <li><a href="https://zermattresort.com/wp-content/uploads/2021/06/Summer-Concert-Series-2021.pdf" style="color:#ffffff">Zermatt Concert Series - Jul 10</a></li>
     <li><a href="https://parksandrec.mapleton.org/event/concerts-in-the-park-farmers-market-4/">Mapleton Concert Series - Jul 26</a></li>
     <li>Private Party - Jul 29</li>
     <li><a href="https://www.plgrove.org/arts/docs/2021-concerts-in-the-park.pdf">PG Concert Series - Aug 1</a></li>
