Add creeckstock and .5k fun run

--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -11,7 +11,9 @@ description: >
     <li><a href="https://parksandrec.mapleton.org/event/concerts-in-the-park-farmers-market-4/" style="color:#ffffff">Mapleton Concert Series - Jul 26</a></li>
     <li>Private Party - Jul 29</li>
     <li><a href="https://www.plgrove.org/arts/docs/2021-concerts-in-the-park.pdf" style="color:#ffffff">PG Concert Series - Aug 1</a></li>
+    <li>Creekstock - Aug 13</li>
     <li><a href="https://www.northogdencity.com/parksrec/page/music-mondays-park" style="color:#ffffff">Music Mondays in the Park - Aug 16</a></li>
     <li><a href="https://www.facebook.com/PGHeritageFestival/" style="color:#ffffff">PG Heritage Days - Sep 13</a></li>
+    <li>.5k Fun Run Fundraiser - Sep 25</li>
   </ul>
 image: "img/carousel/live.jpg"
