--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -1,19 +1,14 @@
 weight: 1
-title: "Shows 2021"
+title: "Shows 2022"
 # An API for getting events from google calendar
 # https://github.com/qualityshepherd/googleCalendarEventList
 description: >
   <ul class="list-style-none">
-    <li>PG Food Truck Show - May 28</li>
-    <li>Private Party - Jun 19</li>
-    <li>Private Party - Jun 28</li>
-    <li><a href="https://zermattresort.com/wp-content/uploads/2021/06/Summer-Concert-Series-2021.pdf" style="color:#ffffff">Zermatt Concert Series - Jul 10</a></li>
-    <li><a href="https://parksandrec.mapleton.org/event/concerts-in-the-park-farmers-market-4/" style="color:#ffffff">Mapleton Concert Series - Jul 26</a></li>
-    <li>Private Party - Jul 29</li>
-    <li><a href="https://www.plgrove.org/arts/docs/2021-concerts-in-the-park.pdf" style="color:#ffffff">PG Concert Series - Aug 1</a></li>
-    <li>Creekstock - Aug 13</li>
-    <li><a href="https://www.northogdencity.com/parksrec/page/music-mondays-park" style="color:#ffffff">Music Mondays in the Park - Aug 16</a></li>
-    <li><a href="https://www.facebook.com/PGHeritageFestival/" style="color:#ffffff">PG Heritage Days - Sep 13</a></li>
-    <li>.5k Fun Run Fundraiser - Sep 25</li>
+    <li>Private Party - May 7</li>
+    <li><a href="https://www.strawberrydays.org/" style="color:#ffffff">Strawberry Days - Jun 14</a></li>
+    <li><a href="https://www.facebook.com/Scofield-Pleasant-Valley-Days-177213356332165/" style="color:#ffffff">Scofield Valley Days - Jul 2</a></li>
+    <li>Mapleton Concert Series - Jul 18</li>
+    <li><a href="http://justforkidsofutahcounty.com/" style="color:#ffffff">Fundraiser - Sep 10</a></li>
+    <li><a href="https://www.facebook.com/PGHeritageFestival/" style="color:#ffffff">PG Heritage Days - Sep 12</a></li>
   </ul>
 image: "img/carousel/live.jpg"
