--- a/config.toml
+++ b/config.toml
@@ -3,15 +3,24 @@ title = "Shane Lee Band"
 theme = "hugo-universal-theme"
 themesDir = "themes"
 languageCode = "en-us"
+
 # Site language. Available translations in the theme's `/i18n` directory.
 defaultContentLanguage = "en"
+
 # Enable comments by entering your Disqus shortname
 disqusShortname = "shaneleeband"
+
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = "UA-119720818-1"
 
+# number of words of summarized post content (default 70)
+summaryLength = 70
+
 # Define the number of posts per page
 paginate = 10
+
+# not pluralize title pages by default
+pluralizelisttitles = false
 
 [menu]
 
@@ -19,22 +28,25 @@ paginate = 10
 
 [[menu.main]]
     name = "Home"
+    identifier = "menu.home"
     url  = "/"
     weight = 1
 
 [[menu.main]]
     name = "Blog"
+    identifier = "menu.blog"
     url  = "/blog/"
     weight = 2
 
 [[menu.main]]
     name = "Bio"
-    identifier = "bio"
+    identifier = "menu.bio"
     url  = "/categories/bio/"
     weight = 3
 
 [[menu.main]]
     name = "Contact"
+    identifier = "menu.contact"
     url  = "/contact/"
     weight = 4
 
@@ -58,26 +70,54 @@ paginate = 10
     defaultKeywords = ["shaneleeband", "utah", "country", "live", "band"]
     defaultDescription = "Utah's Best Country Music"
 
+    # Social media
+    facebook_site = "https://www.facebook.com/shaneleeband"
+    twitter_site = ""
+    default_sharing_image = ""
+
     # Google Maps API key (if not set will default to not passing a key.)
+    enableGoogleMaps = false
     googleMapsApiKey = ""
+
+    latitude = "40.4133408"
+    longitude = "-111.9388354"
 
     # Style options: default (light-blue), blue, green, marsala, pink, red, turquoise, violet
     style = "marsala"
 
     # Since this template is static, the contact form uses www.formspree.io as a
     # proxy. The form makes a POST request to their servers to send the actual
-    # email. Visitors can send up to a 1000 emails each month for free.
+    # email. Visitors can send up to a 50 emails each month for free.
     #
     # What you need to do for the setup?
     #
-    # - set your email address under 'email' below
+    # - register your account to https://formspree.io/register
+    # - login and create new form
+    # - set your form's endpoint url under 'formspree_action' below
     # - upload the generated site to your server
-    # - send a dummy email yourself to confirm your account
-    # - click the confirm link in the email from www.formspree.io
+    # - test a dummy email yourself
     # - you're done. Happy mailing!
     #
-    # Enable the contact form by entering your Formspree.io email
-    email = "shane.d.lee@gmail.com"
+    # Enable the contact form by entering your Formspree.io endpoint url
+    formspree_action = "https://formspree.io/f/shane.d.lee@gmail.com"
+    contact_formo_ajax = false
+
+    # Formspree form supports Google reCAPTCHA Key (type v2).
+    # If you use this feature, you should enable reCAPTCHA feature in the Formspree dashboard.
+    #
+    # By default, Formspree use a redirect page for recaptcha widget.
+    # If you use a recaptcha widget in your contact page, you should do next steps.
+    # (if you don't want, skip these steps)
+    #
+    #   1. register your site on Google recaptcha admin page: https://www.google.com/recaptcha/admin
+    #   2. select reCAPTCHA v2 and checkbox widget type.
+    #   3. remember site key and secret key.
+    #   4. enter secret key into "Custom reCAPTCHA Key" field in your Formspree form setting page.
+    #   5. change `enableRecaptchaInContactForm` is to true
+    #   6. enter site key into `googleRecaptchaKey` to enable a recaptcha widget in your page.
+    #
+    enableRecaptchaInContactForm = false
+    googleRecaptchaKey = "site_key_for_google_recaptcha"
 
     about_us = "<p>The Shane Lee Band is one of Utah's premier country bands.</p>"
     copyright = "Copyright (c) 2003 - 2022, Shane Lee Band; all rights reserved."
@@ -85,7 +125,14 @@ paginate = 10
     # Format dates with Go's time formatting
     date_format = "January 2, 2006"
 
-    logo = "img/shaneleeband.png"
+    dropdown_mouse_over = false
+
+    # Logo
+    disabled_logo = false
+    logo_text = "Shane Lee Band"
+    logo = "img/logo.png"
+    logo_small = "img/logo-small.png"
+
     address = """<p>
         <strong>Shane Lee Band</strong>
         <br>Lehi, UT 84043
@@ -95,8 +142,6 @@ paginate = 10
         <br>(801) 602-0570
       </p>
       """
-    latitude = "40.4133408"
-    longitude = "-111.9388354"
 
 [Permalinks]
     blog = "/blog/:year/:month/:day/:filename/"
@@ -122,14 +167,30 @@ paginate = 10
     tags = true
     search = true
 
-[params.carousel]
-    enable = true
+[params.carouselCustomers]
+    items = 6
+    auto_play = false
+    slide_speed = 2000
+    pagination_speed = 1000
+
+[params.carouselTestimonials]
+    items = 4
+    auto_play = false
+    slide_speed = 2000
+    pagination_speed = 1000
+
+[params.carouselHomepage]
     # All carousel items are defined in their own files. You can find example items
     # at 'exampleSite/data/carousel'.
     # For more informtion take a look at the README.
+    enable = true
+    auto_play = true
+    slide_speed = 2000
+    pagination_speed = 1000
 
 [params.features]
     enable = true
+    cols = 3 # Default: 3, Available 2,3,4,6
     # All features are defined in their own files. You can find example items
     # at 'exampleSite/data/features'.
     # For more informtion take a look at the README.
@@ -140,7 +201,7 @@ paginate = 10
     # at 'exampleSite/data/testimonials'.
     # For more informtion take a look at the README.
     title = "Testimonials"
-    subtitle = "We have had the privilege to play for many peopl and we always like to hear they come away happy and satisfied. Have a look what our fans said about us."
+    subtitle = "We have had the privilege to play for many people and we always like it when they come away happy and satisfied. Have a look what our fans said about us."
 
 [params.see_more]
     enable = true
@@ -162,3 +223,13 @@ paginate = 10
     enable = true
     title = "From our blog"
     subtitle = "See what's going on with the Shane Lee Band. Here are the most recent posts."
+    hide_summary = false
+
+[params.footer.recent_posts]
+    enable = true
+
+[taxonomies]
+  category = "categories"
+  tag = "tags"
+  author = "authors"
+
