--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -9,7 +9,7 @@ description: >
     <li>Private Party - Jun 6</li>
     <li><a href="https://www.mapleton.org/departments/parks___recreation/events/index.php" style="color:#ffffff">Mapleton Concert Series - Jul 24</a></li>
     <li>Wedding - Jul 29</li>
-    <li>Lindon Concert Series</li>
+    <li>Lindon Concert Series - Aug 19</li>
     <li><a href="https://www.facebook.com/PGHeritageFestival/" style="color:#ffffff">PG Heritage Days - Sep 11</a></li>
     <li><a href="http://justforkidsofutahcounty.com/" style="color:#ffffff">Lehi .5K Fundraiser - Sep 16</a></li>
   </ul>
