--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -1,16 +1,14 @@
 weight: 1
-title: "Shows 2023"
+title: "Shows 2024"
 # An API for getting events from google calendar
 # https://github.com/qualityshepherd/googleCalendarEventList
 description: >
   <ul class="list-style-none">
-    <li>Wedding - Jun 14</li>
-    <li>Wedding - Jun 24</li>
-    <li>Private Party - Jun 06</li>
-    <li><a href="https://www.mapleton.org/departments/parks___recreation/events/index.php" style="color:#ffffff" target="_blank">Mapleton Concert Series - Jul 24</a></li>
-    <li>Wedding - Jul 29</li>
-    <li><a href="https://www.facebook.com/profile.php?id=100057587734175" style="color:#ffffff" target="_blank">Lindon Concert Series - Aug 19</a></li>
-    <li><a href="https://www.facebook.com/PGHeritageFestival/" style="color:#ffffff" target="_blank">PG Heritage Days - Sep 11</a></li>
-    <li><a href="http://justforkidsofutahcounty.com/" style="color:#ffffff" target="_blank">Lehi .5K Fundraiser - Sep 16</a></li>
+    <li>SNAP Prom- Jun 6</li>
+    <li><a href="https://www.facebook.com/events/1997840543979708/" style="color:#ffffff" target="_blank">Salem Concert Series- Jun 10</li>
+    <li><a href="https://www.facebook.com/events/1095952451704458/" style="color:#ffffff" target="_blank">Mapleton Concert Series- Jul 15</li>
+    <li><a href="https://www.facebook.com/events/975396030690845/"  style="color:#ffffff" target="_blank">Lehi Arts in the Park - Jul 28</li>
+    <li><a href="https://www.facebook.com/events/7790565760989716/" style="color:#ffffff" target="_blank">Ed Stevens Memorial Concert Series - Aug 3</li>
+    <li><a href="https://www.facebook.com/events/1929180944213990/" style="color:#ffffff" target="_blank">Pleasant Grove Heritage Festival - Sep 9</li>
   </ul>
 image: "img/carousel/live.jpg"
