Shorten some names in the upcoming carousel

--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -8,7 +8,7 @@ description: >
     <li><a href="https://www.facebook.com/events/1997840543979708/" style="color:#ffffff" target="_blank">Salem Concert Series - Jun 10</li>
     <li><a href="https://www.facebook.com/events/1095952451704458/" style="color:#ffffff" target="_blank">Mapleton Concert Series - Jul 15</li>
     <li><a href="https://www.facebook.com/events/975396030690845/"  style="color:#ffffff" target="_blank">Lehi Arts in the Park - Jul 28</li>
-    <li><a href="https://www.facebook.com/events/7790565760989716/" style="color:#ffffff" target="_blank">Ed Stevens Memorial Concert Series - Aug 3</li>
-    <li><a href="https://www.facebook.com/events/1929180944213990/" style="color:#ffffff" target="_blank">Pleasant Grove Heritage Festival - Sep 9</li>
+    <li><a href="https://www.facebook.com/events/7790565760989716/" style="color:#ffffff" target="_blank">Ed Stevens Memorial Series - Aug 3</li>
+    <li><a href="https://www.facebook.com/events/1929180944213990/" style="color:#ffffff" target="_blank">PG Heritage Festival - Sep 9</li>
   </ul>
 image: "img/carousel/live.jpg"
