--- a/data/carousel/1_upcoming.yaml
+++ b/data/carousel/1_upcoming.yaml
@@ -1,14 +1,16 @@
 weight: 1
-title: "Shows 2024"
+title: "Shows 2025"
 # An API for getting events from google calendar
 # https://github.com/qualityshepherd/googleCalendarEventList
 description: >
   <ul class="list-style-none">
-    <li>SNAP Prom - Jun 6</li>
-    <li><a href="https://www.facebook.com/events/1997840543979708/" style="color:#ffffff" target="_blank">Salem Concert Series - Jun 10</li>
-    <li><a href="https://www.facebook.com/events/1095952451704458/" style="color:#ffffff" target="_blank">Mapleton Concert Series - Jul 15</li>
-    <li><a href="https://www.facebook.com/events/975396030690845/"  style="color:#ffffff" target="_blank">Lehi Arts in the Park - Jul 28</li>
-    <li><a href="https://www.facebook.com/events/7790565760989716/" style="color:#ffffff" target="_blank">Ed Stevens Memorial Series - Aug 3</li>
-    <li><a href="https://www.facebook.com/events/1929180944213990/" style="color:#ffffff" target="_blank">PG Heritage Festival - Sep 9</li>
+    <li>Neighborhood Party - May 17</li>
+    <li><a href="https://www.facebook.com/events/1379684093357106/" style="color:#ffffff" target="_blank">Lehi Arts - Jul 6</li>
+    <li><a href="https://www.facebook.com/events/1885926545533230/" style="color:#ffffff" target="_blank">Spanish Fork Sounds of Summer - Jul 11</li>
+    <li><a href="https://www.facebook.com/events/659396153634787/"  style="color:#ffffff" target="_blank">Mapleton Concerts in the Park - Jul 14</li>
+    <li><a href="https://www.facebook.com/events/1756923625182207/" style="color:#ffffff" target="_blank">Salem Fair in the Square - Aug 9</li>
+    <li>Private Wedding - Aug 16</li>
+    <li><a href="https://www.facebook.com/events/701732175684500/" style="color:#ffffff" target="_blank">PG Heritage Festival - Sep 8</li>
+    <li><a href="https://www.facebook.com/events/1409305223545884/" style="color:#ffffff" target="_blank">Just For Kids Fundraiser - Sep 13</li>
   </ul>
 image: "img/carousel/live.jpg"
